--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="header">
       <div class="container">
         <h1>Innovation Cloud</h1>
+        <p>Connect your ideas globally</p>
       </div>
     </div>
 
