--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <div class="container">
         <h1>Innovation Cloud</h1>
         <p>Connect your ideas globally</p>
+        <a href="#">Learn More</a>
       </div>
     </div>
 
