--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
     <div class="nav">
       <div class="container">
-
+        <li>Register</li>
+        <li>Schedule</li>
+        <li>Sponsors</li>
+        <li>About</li>
+        <li>Contact</li>
       </div>
     </div>
 
