--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
     <div class="jumbotron">
       <div class="container">
-
+        <h1>Stay Connected</h1>
+        <p>Receive weekly insights from industry insiders.</p>
+        <a href="#" class="btn-learn">Join</a>
       </div>
     </div>
 
