--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       </div>
     </div>
 
+    <div class="footer">
+      <div class="container">
+
+      </div>
+    </div>
 
   </body>
 </html>
