create footer resembling footer of mock

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="footer">
       <div class="container">
-
+        <p>Innovation Cloud Conference</p>
       </div>
     </div>
 
