--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="footer">
+    <div class="footer" id="footer">
       <div class="container">
         <p>Innovation Cloud Conference</p>
       </div>
