--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div class="container">
         <h1>Innovation Cloud</h1>
         <p>Connect your ideas globally</p>
-        <a href="#" class="btn-learn">Learn More</a>
+        <a href="#" class="btn">Learn More</a>
       </div>
     </div>
 
@@ -41,7 +41,7 @@
       <div class="container">
         <h1>Stay Connected</h1>
         <p>Receive weekly insights from industry insiders.</p>
-        <a href="#" class="btn-learn">Join</a>
+        <a href="#" class="btn">Join</a>
       </div>
     </div>
 
