make code more concise

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="nav">
       <div class="container">
         <ul>
-          <li>Register</li>
-          <li>Schedule</li>
-          <li>Sponsors</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li class="btn">Register</li>
+          <li class="btn">Schedule</li>
+          <li class="btn">Sponsors</li>
+          <li class="btn">About</li>
+          <li class="btn">Contact</li>
         </ul>
       </div>
     </div>
