Remove .btn for li elements

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="nav">
       <div class="container">
         <ul>
-          <li class="btn">Register</li>
-          <li class="btn">Schedule</li>
-          <li class="btn">Sponsors</li>
-          <li class="btn">About</li>
-          <li class="btn">Contact</li>
+          <li>Register</li>
+          <li>Schedule</li>
+          <li>Sponsors</li>
+          <li>About</li>
+          <li>Contact</li>
         </ul>
       </div>
     </div>
@@ -37,7 +37,7 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h2>Stay Connected</h2>
+        <h2>Stay</h2>
         <p>Receive weekly insights from industry insiders.</p>
         <a href="#" class="btn">Join</a>
       </div>
